--- a/formac.html
+++ b/formac.html
@@ -181,7 +181,7 @@
   <header>
     <nav>
       <div class="logo">
-        <a href="intro.html"><img src="img/UE-Logo-1.png" alt=""></a>
+        <a href="intro.html"><img src="UE-Logo-1.png" alt=""></a>
 
       </div>
       <div class="right">
@@ -207,7 +207,7 @@
                   <path fill="currentColor"
                     d="M104.704 338.752a64 64 0 0 1 90.496 0l316.8 316.8l316.8-316.8a64 64 0 0 1 90.496 90.496L557.248 791.296a64 64 0 0 1-90.496 0L104.704 429.248a64 64 0 0 1 0-90.496" />
                 </svg></li>
-          <div><img src="img/Lang.png" alt=""></span></div>
+          <div><img src="Lang.png" alt=""></span></div>
           </li>
         </ul>
       </div>
@@ -227,7 +227,7 @@
     </section>
     <section class="second">
       <div class="download">
-        <img src="img/download.png" alt="">
+        <img src="download.png" alt="">
         <span>Download Aether for MAC</span>
         <span class="small">&nbsp;&nbsp;v2023.1&nbsp;(released 08/16/2021) | Hotfix</span>
 
